HDX-9301 fix breadcrumb nav spacing

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/organization_/base/organization.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/organization_/base/organization.css
@@ -564,6 +564,9 @@ body {
   content: "";
   padding: 0;
 }
+.toolbarRow .toolbar .breadcrumb .breadcrumb-item + .breadcrumb-item {
+  padding-left: 2px;
+}
 /* END Style breadcrumbs */
 /* Button style */
 .btn {
